add HTML and tailwind to sign in

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body class="bg-[#E3E4EF]">
 		<script type="module" src="/main.js"></script>
 		<header id="header">
-			<nav class="bg-gradient-to-b from-[#0511F2] to-[#030A8C] fixed top-0 left-0 right-0 z-index-50">
+			<nav class="bg-gradient-to-b from-[#0511F2] to-[#030A8C] fixed top-0 left-0 right-0">
 				<div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
 					<div class="relative flex h-16 items-center justify-between">
 						<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
