--- a/signin.html
+++ b/signin.html
@@ -64,24 +64,12 @@
 									class="bg-gray-50 border font-body border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
 									required="" />
 							</div>
-							<div class="terms_condition flex items-start">
-								<div class="flex items-center h-5">
-									<input id="terms" aria-describedby="terms" type="checkbox"
-										class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-										required="" />
-								</div>
-								<div class="ml-3 text-sm">
-									<label for="terms" class="font-body text-gray-500 dark:text-gray-300">I accept the
-										<a class="font-h2 text-primary-600 hover:underline dark:text-primary-500"
-											href="#">Terms and Conditions</a></label>
-								</div>
-							</div>
 							<button type="submit"
-								class="w-full font-h2 text-white bg-[#0511F2] hover:bg-[#030A8C] focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+								class="w-full mt-2 font-h2 text-white bg-[#0511F2] hover:bg-[#030A8C] focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
 								log in to your account
 							</button>
 							<div class="text-sm font-medium text-gray-500 dark:text-gray-300">
-								Not registered? <a href="#"
+								Not registered? <a href="/signup.html"
 									class="text-blue-700 hover:underline dark:text-blue-500">Create account</a>
 							</div>
 						</form>
