add html and tailwind to listing page, also add title and meta description to singin and singup

--- a/signup.html
+++ b/signup.html
@@ -5,12 +5,11 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Hind+Guntur&family=Prompt&display=swap"
-			rel="stylesheet"
-		/>
+		<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Hind+Guntur&family=Prompt&display=swap"
+			rel="stylesheet" />
+		<meta name="description" content="Buy and sell items. Get 1000,- in credit when registering" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>Biddify | Sing up </title>
 	</head>
 
 	<body>
