--- a/listings.html
+++ b/listings.html
@@ -9,13 +9,19 @@
 			href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Hind+Guntur&family=Prompt&display=swap"
 			rel="stylesheet"
 		/>
+		<meta
+			name="description"
+			content="world leading auctuon site, sell and buy items"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>Biddify | Active listings</title>
 	</head>
-	<body>
+	<body class="bg-[#E3E4EF]">
 		<script type="module" src="/main.js"></script>
-		<header>
-			<nav class="bg-gradient-to-b from-[#0511F2] to-[#030A8C]">
+		<header id="header">
+			<nav
+				class="bg-gradient-to-b from-[#0511F2] to-[#030A8C] fixed top-0 left-0 right-0"
+			>
 				<div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
 					<div class="relative flex h-16 items-center justify-between">
 						<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -272,70 +278,211 @@
 				</div>
 			</nav>
 		</header>
-		<main></main>
-		<footer class="p-4 sm:p-6" style="background-image: url(/img/footer.png)">
-			<div class="md:flex md:justify-between">
+		<main>
+			<section id="auction">
+				<div>
+					<h1 class="mt-36 px-10 text-4xl font-h1 text-black max-w-screen-lg mx-auto">Active listings</h1>
+					<div
+						id="list-items"
+						class="px-10 py-10 grid gap-5 sm:grid-flow-col sm:grid-rows-4 md:grid-rows-2 max-w-screen-lg mx-auto"
+					>
+					<!--grid-flow-col grid-cols-1 grid-rows-3 gap-5 lg:grid-cols-3 lg:grid-rows-2 max-w-screen-lg mx-auto -->
+						<a href="/detail.html">
+							<div
+								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer"
+							>
+								<div>
+									<img
+										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+										alt=""
+									/>
+								</div>
+								<div class="py-4 px-4 bg-white">
+									<h2 class="text-lg font-semibold text-gray-600">
+										2020 BMW 3 SERIES
+									</h2>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
+										<p class="mt-4 text-lg text-green-500">$ 2400</p>
+									</div>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
+										<p class="mt-4 text-lg text-red-700">4h 38m</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="/detail.html">
+							<div
+								class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer"
+							>
+								<div>
+									<img
+										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+										alt=""
+									/>
+								</div>
+								<div class="py-4 px-4 bg-white">
+									<h3 class="text-lg font-semibold text-gray-600">
+										2020 BMW 3 SERIES
+									</h3>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
+										<p class="mt-4 text-lg text-green-500">$ 2400</p>
+									</div>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
+										<p class="mt-4 text-lg text-red-700">4h 38m</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="/detail.html">
+							<div
+								class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer"
+							>
+								<div>
+									<img
+										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+										alt=""
+									/>
+								</div>
+								<div class="py-4 px-4 bg-white">
+									<h3 class="text-lg font-semibold text-gray-600">
+										2020 BMW 3 SERIES
+									</h3>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
+										<p class="mt-4 text-lg text-green-500">$ 2400</p>
+									</div>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
+										<p class="mt-4 text-lg text-red-700">4h 38m</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="/detail.html">
+							<div
+								class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer"
+							>
+								<div>
+									<img
+										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+										alt=""
+									/>
+								</div>
+								<div class="py-4 px-4 bg-white">
+									<h3 class="text-lg font-semibold text-gray-600">
+										2020 BMW 3 SERIES
+									</h3>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
+										<p class="mt-4 text-lg text-green-500">$ 2400</p>
+									</div>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
+										<p class="mt-4 text-lg text-red-700">4h 38m</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="/detail.html">
+							<div
+								class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer"
+							>
+								<div>
+									<img
+										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+										alt=""
+									/>
+								</div>
+								<div class="py-4 px-4 bg-white">
+									<h3 class="text-lg font-semibold text-gray-600">
+										2020 BMW 3 SERIES
+									</h3>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
+										<p class="mt-4 text-lg text-green-500">$ 2400</p>
+									</div>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
+										<p class="mt-4 text-lg text-red-700">4h 38m</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="/detail.html">
+							<div
+								class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer"
+							>
+								<div>
+									<img
+										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
+										alt=""
+									/>
+								</div>
+								<div class="py-4 px-4 bg-white">
+									<h3 class="text-lg font-semibold text-gray-600">
+										2020 BMW 3 SERIES
+									</h3>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Current bid</p>
+										<p class="mt-4 text-lg text-green-500">$ 2400</p>
+									</div>
+									<div class="flex">
+										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
+										<p class="mt-4 text-lg text-red-700">4h 38m</p>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer id="footer"
+			class="p-4 mt-10 sm:p-6"
+			style="background-image: url(/img/footer.png)"
+		>
+			<div class="max-w-screen-lg mx-auto md:flex md:justify-between">
 				<div class="mb-6 md:mb-0">
 					<a href="/index.html" class="flex items-center">
-						<img
-							src="/img/logoSmall.png"
-							class="mr-3 "
-							alt="FlowBite Logo"
-						/>
+						<img src="/img/logoSmall.png" class="mr-3" alt="FlowBite Logo" />
 					</a>
 				</div>
 				<div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
 					<div>
-						<h2
-							class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase"
-						>
+						<h2 class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase">
 							help center
 						</h2>
 						<ul class="text-white font-body text-sm">
 							<li class="mb-4">
-								<a href="/" class="hover:underline"
-									>Twitter</a
-								>
+								<a href="/" class="hover:underline">Twitter</a>
 							</li>
 							<li class="mb-4">
-								<a href="/" class="hover:underline"
-									>Facebook</a
-								>
+								<a href="/" class="hover:underline">Facebook</a>
 							</li>
-              <li>
-								<a href="/" class="hover:underline"
-									>Contact us</a
-								>
+							<li>
+								<a href="/" class="hover:underline">Contact us</a>
 							</li>
 						</ul>
 					</div>
 					<div>
-						<h2
-							class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase"
-						>
+						<h2 class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase">
 							download
 						</h2>
 						<ul class="text-white font-body text-sm">
 							<li class="mb-4">
-								<a
-									href="/"
-									class="hover:underline"
-									>Ios</a
-								>
+								<a href="/" class="hover:underline">Ios</a>
 							</li>
 							<li>
-								<a href="/" class="hover:underline"
-									>Android</a
-								>
+								<a href="/" class="hover:underline">Android</a>
 							</li>
 						</ul>
 					</div>
 					<div>
-						<h2
-							class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase"
-						>
-							Legal
-						</h2>
+						<h2 class="mb-6 text-sm font-h2 text-[#F2AE2E] uppercase">Legal</h2>
 						<ul class="text-white font-body text-sm">
 							<li class="mb-4">
 								<a href="#" class="hover:underline">Privacy Policy</a>
@@ -348,19 +495,18 @@
 				</div>
 			</div>
 			<hr
-				class="my-6 border-white sm:mx-auto lg:my-8"
+				class="max-w-screen-lg mx-auto my-6 border-white sm:mx-auto lg:my-8"
 			/>
-			<div class="sm:flex sm:items-center sm:justify-between">
+			<div
+				class="max-w-screen-lg mx-auto sm:flex sm:items-center sm:justify-between"
+			>
 				<span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
 					>© 2022
 					<a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>.
 					All Rights Reserved.
 				</span>
 				<div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
@@ -375,10 +521,7 @@
 						</svg>
 						<span class="sr-only">Facebook page</span>
 					</a>
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
@@ -393,10 +536,7 @@
 						</svg>
 						<span class="sr-only">Instagram page</span>
 					</a>
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
@@ -409,10 +549,7 @@
 						</svg>
 						<span class="sr-only">Twitter page</span>
 					</a>
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
@@ -427,10 +564,7 @@
 						</svg>
 						<span class="sr-only">GitHub account</span>
 					</a>
-					<a
-						href="#"
-						class="text-white dark:hover:text-gray-500"
-					>
+					<a href="#" class="text-white dark:hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
