--- a/signin.html
+++ b/signin.html
@@ -10,7 +10,7 @@
 		rel="stylesheet" />
 	<meta name="description" content="Buy and sell items. Get 1000,- in credit when registering" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Biddify | Number on auction site</title>
+	<title>Biddify | Sing in </title>
 </head>
 
 <body class="bg-[#E3E4EF]">
