--- a/indexold.html
+++ b/indexold.html
@@ -9,19 +9,14 @@
 			href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Hind+Guntur&family=Prompt&display=swap"
 			rel="stylesheet"
 		/>
-		<meta
-			name="description"
-			content="Buy and sell items. Get 1000,- in credit when registering"
-		/>
+    <meta name="description" content="Buy and sell items. Get 1000,- in credit when registering">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Biddify | Number on auction site</title>
 	</head>
 	<body class="bg-[#E3E4EF]">
 		<script type="module" src="/main.js"></script>
 		<header id="header">
-			<nav
-				class="bg-gradient-to-b from-[#33333F] to-[#010101] fixed top-0 left-0 right-0 z-10"
-			>
+			<nav class="bg-gradient-to-b from-[#0511F2] to-[#030A8C] fixed top-0 left-0 right-0">
 				<div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
 					<div class="relative flex h-16 items-center justify-between">
 						<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -72,20 +67,16 @@
 							class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-between"
 						>
 							<div class="flex flex-shrink-0 items-center">
-								<a href="/index.html">
-									<img
+								<img
 									class="block w-auto lg:hidden"
 									src="/img/logoSmall.png"
 									alt="Your Company"
 								/>
-								</a>
-								<a href="/index.html">
-									<img
+								<img
 									class="hidden w-auto lg:block"
 									src="/img/logoSmall.png"
 									alt="Your Company"
 								/>
-								</a>
 							</div>
 							<!-- SEARCH -->
 							<form class="hidden sm:block">
@@ -158,7 +149,7 @@
 										tabindex="-1"
 									>
 										<a
-											href="/profile.html"
+											href="#"
 											class="block px-4 py-2 text-sm text-gray-700"
 											role="menuitem"
 											tabindex="-1"
@@ -190,14 +181,14 @@
 					<div class="sm:hidden" id="mobile-menu">
 						<div class="space-y-1 px-2 pt-2 pb-3">
 							<a
-								href="/index.html"
+								href="#"
 								class="text-gray-300 font-body hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
 								aria-current="page"
 								>Home</a
 							>
 
 							<a
-								href="/listings.html"
+								href="#"
 								class="text-gray-300 hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
 								>Auctions</a
 							>
@@ -209,7 +200,7 @@
 							>
 
 							<a
-								href="/profile.html"
+								href="#"
 								class="text-gray-300 hover:text-medium hover:text-white block px-3 py-2 rounded-md text-base font-medium"
 								>Profile</a
 							>
@@ -251,41 +242,41 @@
 							</div>
 						</form>
 					</div>
-				</div>
-				<div class="hidden sm:pl-6 sm:block bg-[#A77619]">
-					<div class="flex space-x-4">
-						<a
-							href="/index.html"
-							class="text-white px-3 py-2 rounded-md text-sm font-medium"
-							aria-current="page"
-							>Home</a
-						>
+					<div class="hidden sm:ml-6 sm:block">
+						<div class="flex space-x-4">
+							<a
+								href="#"
+								class="text-white px-3 py-2 rounded-md text-sm font-medium"
+								aria-current="page"
+								>Home</a
+							>
 
-						<a
-							href="/listings.html"
-							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-							>Auctions</a
-						>
+							<a
+								href="#"
+								class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+								>Auctions</a
+							>
 
-						<a
-							href="/listings.html"
-							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-							>Active Auctions</a
-						>
+							<a
+								href="#"
+								class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+								>Active Auctions</a
+							>
 
-						<a
-							href="/profile.html"
-							class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-							>Profile</a
-						>
+							<a
+								href="#"
+								class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+								>Profile</a
+							>
+						</div>
 					</div>
 				</div>
 			</nav>
 		</header>
 		<main>
-			<!-- <section id="hero">
+			<section id="hero">
 				<div
-					class="max-w-screen-lg md:bg-contain lg:bg-cover md:max-h-screen mt-20 md:mt-36 my-10 px-4 py-7 mx-auto lg:gap-8 xl:gap-0 lg:py-16"
+					class="max-w-screen-lg md:bg-contain lg:bg-cover md:max-h-screen mt-20 md:mt-36  my-10 px-4 py-7 mx-auto lg:gap-8 xl:gap-0 lg:py-16"
 					style="background-image: url(/img/heroimg.png)"
 				>
 					<div class="mr-auto place-self-center">
@@ -328,96 +319,18 @@
 								</p>
 							</div>
 						</div>
+
 						<a
 							href="/signup.html"
 							class="bg-[#F2AE2E] px-4 sm:min-w-4xl py-4 text-base font-medium text-center rounded-lg hover:bg-[#F1BB56]"
 						>
 							Register today to start bidding > >
 						</a>
-					</div>
-				</div>
-			</section> -->
-			<section class="dark:bg-gray-900 mt-16 sm:mt-[100px] sm:py-20 lg:py-0">
-				<div
-					class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
-				>
-					<div class="mr-auto place-self-center lg:col-span-7">
-						<h1
-							class="max-w-2xl mb-4 text-4xl font-h1 tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white"
-						>
-							Auction up your items today!
-						</h1>
-						<p class="mb-6 text-lg font-h2 text-white">
-							over <span class="text-[#F2AE2E]">3 millions</span> used,wholesale
-							and reperiable items sold pr year
-						</p>
-						<div class="flex flex-col sm:flex-row mb-10">
-							<div
-								class="px-5 py-3 sm:mr-3 text-base font-medium text-white rounded-lg"
-							>
-								<h2>1. <span class="text-[#F2AE2E]"> Register</span></h2>
-								<p class="font-body text-xs">
-									Get 1000,- in credits when <br />
-									registering an account
-								</p>
-							</div>
-							<svg
-								class="w-5 h-5 -mr-1 text-white flex self-center"
-								fill="currentColor"
-								viewBox="0 0 20 20"
-								xmlns="http://www.w3.org/2000/svg"
-							>
-								<path
-									fill-rule="evenodd"
-									d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-									clip-rule="evenodd"
-								></path>
-							</svg>
-							<div
-								class="mt-2 sm:mt-0 px-5 py-3 sm:mr-3 text-base font-medium text-white rounded-lg"
-							>
-								<h2>2. <span class="text-[#F2AE2E]"> Find</span></h2>
-								<p class="font-body text-xs">
-									Search our libary for more <br />
-									than 100.330 items
-								</p>
-							</div>
-							<svg
-								class="w-5 h-5 -mr-1 text-white flex self-center"
-								fill="currentColor"
-								viewBox="0 0 20 20"
-								xmlns="http://www.w3.org/2000/svg"
-							>
-								<path
-									fill-rule="evenodd"
-									d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-									clip-rule="evenodd"
-								></path>
-							</svg>
-							<div
-								class="mt-2 sm:mt-0 px-5 py-3 text-base font-medium text-white rounded-lg"
-							>
-								<h2>3. <span class="text-[#F2AE2E]">Bid</span></h2>
-								<p class="font-body text-xs">
-									Bid on daily auto auctions <br />
-									Monday–Friday.
-								</p>
-							</div>
-						</div>
-						<a
-							href="/signup.html"
-							class="bg-[#F2AE2E] px-4 sm:min-w-4xl py-4 text-base font-medium text-center rounded-lg hover:bg-[#F1BB56]"
-						>
-							Register today to start bidding > >
-						</a>
-					</div>
-					<div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-						<img src="/img/heroimg2.png" alt="mockup" />
 					</div>
 				</div>
 			</section>
 			<section id="auction">
-				<div class="bg-gradient-to-b from-[#F2AE2E] to-[#A77619] mt-10">
+				<div class="bg-gradient-to-b from-[#F2AE2E] to-[#A77619]">
 					<div
 						class="max-w-screen-xl md:max-h-screen mx-auto p-10 flex justify-between"
 					>
@@ -436,20 +349,12 @@
 						</div>
 					</div>
 				</div>
-				<div id="listing">
-					<div
-						id="list-items"
-						class="px-10 py-10 grid grid-flow-col grid-cols-1 grid-rows-6 gap-5 lg:grid-cols-3 lg:grid-rows-2 max-w-screen-lg mx-auto"
-					>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
+				<div>
+					<div id="list-items" class="px-10 py-20 grid grid-flow-col grid-cols-1 grid-rows-3 gap-5 lg:grid-cols-3 lg:grid-rows-2 max-w-screen-lg mx-auto">
+            <a href="/detail.html">
+							<div class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
 								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
+									<img src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg" alt=""/>
 								</div>
 								<div class="py-4 px-4 bg-white">
 									<h3 class="text-lg font-semibold text-gray-600">
@@ -462,24 +367,14 @@
 									<div class="flex">
 										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
 										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
 									</div>
 								</div>
 							</div>
 						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
+            <a href="/detail.html">
+							<div class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
 								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
+									<img src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg" alt=""/>
 								</div>
 								<div class="py-4 px-4 bg-white">
 									<h3 class="text-lg font-semibold text-gray-600">
@@ -492,24 +387,14 @@
 									<div class="flex">
 										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
 										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
 									</div>
 								</div>
 							</div>
 						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
+            <a href="/detail.html">
+							<div class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
 								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
+									<img src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg" alt=""/>
 								</div>
 								<div class="py-4 px-4 bg-white">
 									<h3 class="text-lg font-semibold text-gray-600">
@@ -522,24 +407,14 @@
 									<div class="flex">
 										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
 										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
 									</div>
 								</div>
 							</div>
 						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
+            <a href="/detail.html">
+							<div class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
 								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
+									<img src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg" alt=""/>
 								</div>
 								<div class="py-4 px-4 bg-white">
 									<h3 class="text-lg font-semibold text-gray-600">
@@ -552,24 +427,14 @@
 									<div class="flex">
 										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
 										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
 									</div>
 								</div>
 							</div>
 						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
+            <a href="/detail.html">
+							<div class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
 								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
+									<img src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg" alt=""/>
 								</div>
 								<div class="py-4 px-4 bg-white">
 									<h3 class="text-lg font-semibold text-gray-600">
@@ -582,24 +447,14 @@
 									<div class="flex">
 										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
 										<p class="mt-4 text-lg text-red-700">4h 38m</p>
-									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
 									</div>
 								</div>
 							</div>
 						</a>
-						<a href="/detail.html">
-							<div
-								class="max-w-xs rounded-md shadow-lg hover:scale-105 transition duration-500 cursor-pointer z-0"
-							>
+            <a href="/detail.html">
+							<div class="max-w-xs rounded-md overflow-hidden shadow-lg hover:scale-105 transition duration-500 cursor-pointer">
 								<div>
-									<img
-										src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg"
-										alt=""
-									/>
+									<img src="https://media.ldlc.com/r1600/ld/products/00/05/82/02/LD0005820208_1.jpg" alt=""/>
 								</div>
 								<div class="py-4 px-4 bg-white">
 									<h3 class="text-lg font-semibold text-gray-600">
@@ -613,21 +468,15 @@
 										<p class="mt-4 mr-3 text-lg font-thin">Time remaining</p>
 										<p class="mt-4 text-lg text-red-700">4h 38m</p>
 									</div>
-									<div class="flex justify-center">
-										<button class="bg-black w-full my-3 hover:bg-[#A77619] rounded-md">
-											<p class="font-body text-white py-2">View listing</p>
-										</button>
-									</div>
 								</div>
 							</div>
-						</a>	
+						</a>
 					</div>
 				</div>
 			</section>
 		</main>
-		<footer
-			id="footer"
-			class="p-4 pt-10 sm:pt-14 mt-10 sm:p-6"
+		<footer id="footer"
+			class="p-4 mt-10 sm:p-6"
 			style="background-image: url(/img/footer.png)"
 		>
 			<div class="max-w-screen-lg mx-auto md:flex md:justify-between">
