--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 					</div>
 				</div>
 			</section> -->
-			<section class="dark:bg-gray-900 mt-16 sm:mt-[100px] sm:py-20 lg:py-0">
+			<section class="dark:bg-gray-900 mt-16 sm:mt-[100px] sm:py-20 lg:py-0 z-10">
 				<div
 					class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
 				>
@@ -439,7 +439,7 @@
 				<div id="listing">
 					<div
 						id="list-items"
-						class="px-10 py-10 grid grid-flow-col grid-cols-1 grid-rows-6 gap-5 lg:grid-cols-3 lg:grid-rows-2 max-w-screen-lg mx-auto"
+						class="px-10 py-10 grid grid-flow-col grid-cols-1 grid-rows-6 gap-5 lg:grid-cols-3 lg:grid-rows-2 max-w-screen-lg mx-auto z-0"
 					>
 						<a href="/detail.html">
 							<div
